# parallel-programming-course

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cuda/: CMakeLists.txt  common.h  device-query.cu  hello-world.cu  int-add.cu  long-vector-add.cu
omp/: CMakeLists.txt
src/: CMakeLists.txt
src/omp/: CMakeLists.txt  hello-world.c  trapezoidal-rule.c
